[gd_scene load_steps=19 format=3 uid="uid://02q75f4idhxw"]

[ext_resource type="PackedScene" uid="uid://6i2dxefjcety" path="res://addons/reaction/components/ReactionUIListObjectFormItem.tscn" id="1_gf73t"]
[ext_resource type="Script" uid="uid://cmermr27mkd8u" path="res://addons/reaction/components/responses_edit_forms/dialog_responses_components/ReactionUIDialogText.gd" id="2_g42l3"]
[ext_resource type="PackedScene" uid="uid://doabmy6rit131" path="res://addons/reaction/components/ReactionUISearchMenu.tscn" id="3_aox22"]
[ext_resource type="PackedScene" uid="uid://bujjba3nge54o" path="res://addons/reaction/components/ReactionUIListObjectForm.tscn" id="4_bflyh"]
[ext_resource type="Script" uid="uid://wjclotthw7aj" path="res://addons/reaction/scripts/ListObjectFormObjectToAdd.gd" id="5_7kthi"]
[ext_resource type="Script" uid="uid://bv2nf0mygo3er" path="res://addons/reaction/scripts/items/ReactionCriteriaItem.gd" id="6_gf73t"]
[ext_resource type="Script" uid="uid://bb5087ylli2o7" path="res://addons/reaction/scripts/ReactionTagItem.gd" id="7_qwl8y"]
[ext_resource type="Script" uid="uid://b02twwj7k3kqc" path="res://addons/reaction/scripts/items/ReactionContextModificationItem.gd" id="8_mjrdm"]
[ext_resource type="PackedScene" uid="uid://du1las4wvlpxc" path="res://addons/reaction/components/ReactionUIModification.tscn" id="9_wt7lo"]
[ext_resource type="PackedScene" uid="uid://c4tm8i3lmwl6q" path="res://addons/reaction/components/ReactionUIIText.tscn" id="10_gf73t"]

[sub_resource type="Image" id="Image_rs8kc"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 255, 92, 92, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 255, 93, 93, 255, 255, 92, 92, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 92, 92, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 92, 92, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 231, 255, 90, 90, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 90, 90, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 91, 91, 42, 0, 0, 0, 0, 0, 0, 0, 0, 255, 91, 91, 42, 255, 93, 93, 233, 255, 92, 92, 232, 255, 93, 93, 41, 0, 0, 0, 0, 0, 0, 0, 0, 255, 91, 91, 42, 255, 93, 93, 233, 255, 92, 92, 232, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 91, 91, 45, 255, 93, 93, 44, 0, 0, 0, 0, 255, 91, 91, 42, 255, 91, 91, 42, 0, 0, 0, 0, 255, 91, 91, 45, 255, 93, 93, 44, 0, 0, 0, 0, 255, 91, 91, 42, 255, 91, 91, 42, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 91, 91, 45, 255, 92, 92, 235, 255, 92, 92, 234, 255, 89, 89, 43, 0, 0, 0, 0, 0, 0, 0, 0, 255, 91, 91, 45, 255, 92, 92, 235, 255, 92, 92, 234, 255, 89, 89, 43, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 92, 92, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 91, 91, 59, 255, 92, 92, 61, 255, 92, 92, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 91, 91, 59, 255, 92, 92, 61, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_7ykwi"]
image = SubResource("Image_rs8kc")

[sub_resource type="Resource" id="Resource_bflyh"]
script = ExtResource("6_gf73t")
operation = ""
is_reverse = false
value_a = ""
value_b = ""
uid = "ec322545-57b7-4fc3-a214-d22a1d767749"
label = "item_label"
description = "Item long description"
scope = "Global"
reaction_item_type = 4
tags = Array[ExtResource("7_qwl8y")]([])
metadata/_custom_type_script = "uid://bv2nf0mygo3er"

[sub_resource type="Resource" id="Resource_7kthi"]
script = ExtResource("5_7kthi")
object_name = "Criteria"
object_resource_class = SubResource("Resource_bflyh")
metadata/_custom_type_script = "uid://wjclotthw7aj"

[sub_resource type="Resource" id="Resource_aox22"]
script = ExtResource("6_gf73t")
operation = ""
is_reverse = false
value_a = ""
value_b = ""
uid = "1d3f4c8d-8c6b-4d0b-80aa-abf0d370a030"
label = "new_criteria"
description = "Item long description"
scope = "Global"
reaction_item_type = 4
tags = Array[ExtResource("7_qwl8y")]([])
metadata/_custom_type_script = "uid://bv2nf0mygo3er"

[sub_resource type="Resource" id="Resource_xridy"]
script = ExtResource("8_mjrdm")
modification_value = ""
operation = ""
function = ""
is_function = false
uid = "6ce7ac99-da7e-4d4d-9376-6a23b9ae1123"
label = "item_label"
description = "Item long description"
scope = "Global"
reaction_item_type = 5
tags = Array[ExtResource("7_qwl8y")]([])
metadata/_custom_type_script = "uid://b02twwj7k3kqc"

[sub_resource type="Resource" id="Resource_op51p"]
script = ExtResource("5_7kthi")
object_name = "Modification"
object_resource_class = SubResource("Resource_xridy")
metadata/_custom_type_script = "uid://wjclotthw7aj"

[sub_resource type="Resource" id="Resource_gf73t"]
script = ExtResource("8_mjrdm")
modification_value = ""
operation = ""
function = ""
is_function = false
uid = "c18634ac-a433-4404-b018-ad7a71a19951"
label = "new_modification"
description = "Item long description"
scope = "Global"
reaction_item_type = 5
tags = Array[ExtResource("7_qwl8y")]([])
metadata/_custom_type_script = "uid://b02twwj7k3kqc"

[node name="ReactionUIDialogText" instance=ExtResource("1_gf73t")]
script = ExtResource("2_g42l3")
show_event = true
show_criterias = true
show_modifications = true
object_name = "choice"
remove_object_function_name = "remove_choice_by_index"

[node name="Columns" parent="." index="0"]
theme_override_constants/separation = 10

[node name="LabelContainer" type="VBoxContainer" parent="Columns" index="1"]
layout_mode = 2

[node name="Label" type="Label" parent="Columns/LabelContainer" index="0"]
layout_mode = 2
text = "Label:"

[node name="LabelLineEdit" type="LineEdit" parent="Columns/LabelContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="TextContainer" type="VBoxContainer" parent="Columns" index="2"]
layout_mode = 2

[node name="Label" type="Label" parent="Columns/TextContainer" index="0"]
layout_mode = 2
text = "Choice text:"

[node name="TextButton" type="Button" parent="Columns/TextContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
text = "Text"

[node name="EventContainer" type="VBoxContainer" parent="Columns" index="3"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="Columns/EventContainer" index="0"]
layout_mode = 2
text = "Triggers:"

[node name="EventSearchMenu" parent="Columns/EventContainer" index="1" instance=ExtResource("3_aox22")]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="CriteriasButton" type="Button" parent="Columns" index="4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "Criterias"

[node name="ModificationsButton" type="Button" parent="Columns" index="5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "Modifications"

[node name="RemoveObjectButton" parent="Columns" index="6"]
tooltip_text = "Remove choice"
icon = SubResource("ImageTexture_7ykwi")

[node name="CriteriasDialog" type="AcceptDialog" parent="." index="1"]
unique_name_in_owner = true
title = "Choice Criterias"
size = Vector2i(900, 500)

[node name="Criterias" parent="CriteriasDialog" index="3" instance=ExtResource("4_bflyh")]
unique_name_in_owner = true
objects_to_add_data_array = Array[ExtResource("5_7kthi")]([SubResource("Resource_7kthi")])
list_resource_class = SubResource("Resource_aox22")

[node name="ModificationsDialog" type="AcceptDialog" parent="." index="2"]
unique_name_in_owner = true
title = "Choice Modifications"
size = Vector2i(800, 500)

[node name="Modifications" parent="ModificationsDialog" index="3" instance=ExtResource("4_bflyh")]
unique_name_in_owner = true
objects_to_add_data_array = Array[ExtResource("5_7kthi")]([SubResource("Resource_op51p")])
list_resource_class = SubResource("Resource_gf73t")
object_scene = ExtResource("9_wt7lo")

[node name="TextDialog" type="AcceptDialog" parent="." index="3"]
unique_name_in_owner = true
title = "Choice texts"
size = Vector2i(800, 400)

[node name="ScrollContainer" type="ScrollContainer" parent="TextDialog" index="3"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Texts" parent="TextDialog/ScrollContainer" index="0" instance=ExtResource("10_gf73t")]
unique_name_in_owner = true
layout_mode = 2
file_paths_field_name = "file_path"

[connection signal="text_submitted" from="Columns/LabelContainer/LabelLineEdit" to="." method="_on_label_line_edit_text_submitted"]
[connection signal="pressed" from="Columns/TextContainer/TextButton" to="." method="_on_choice_text_button_pressed"]
[connection signal="item_selected" from="Columns/EventContainer/EventSearchMenu" to="." method="_on_event_search_menu_item_selected"]
[connection signal="pressed" from="Columns/CriteriasButton" to="." method="_on_criterias_button_pressed"]
[connection signal="pressed" from="Columns/ModificationsButton" to="." method="_on_modifications_button_pressed"]
